src/tests/TodoList/errors/ATodoCannotBeRemovedFromAClosedList.ts
import { CustomError } from '../../../lib'

export default CustomError<'ATodoCannotBeRemovedFromAClosedList'>({
  name: 'ATodoCannotBeRemovedFromAClosedList',
})
